crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/parent_relative_target_matches_normalized_target.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect plugins --path=src/../other/file.ts
```

## `biome.json`

```json
{
  "plugins": [
    "./base.grit",
    { "path": "./src-only.grit", "includes": ["src/**"] },
    { "path": "./other-only.grit", "includes": ["other/**"] }
  ],
  "overrides": [{ "includes": ["src/**"], "plugins": ["./src-override.grit"] }]
}
```

## `base.grit`

```grit
`unterminated
```

## `other-only.grit`

```grit
`unterminated
```

## `src-only.grit`

```grit
`unterminated
```

## `src-override.grit`

```grit
`unterminated
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The configuration enables 2 plugin rules for other/file.ts.
  
  Local plugins
  
  - base.grit (rule name: base)
  - other-only.grit (rule name: other-only)
  

```
